@@ -8,9 +8,12 @@ import org.mockito.junit.jupiter.MockitoExtension;
 import pdf_service.entity.MaterialEntity;
 import pdf_service.entity.SourceEntity;
 import pdf_service.model.CreateMaterialRequest;
-import pdf_service.repository.CreateMaterialRepository;
+import pdf_service.repository.MaterialRepository;
+import pdf_service.repository.SourceRepository;
 
-import java.util.*;
+import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.List;
 
 import static org.junit.jupiter.api.Assertions.*;
 import static org.mockito.ArgumentMatchers.any;
@@ -20,7 +23,10 @@ import static org.mockito.Mockito.*;
 class CreateMaterialServiceTest {
 
     @Mock
-    private CreateMaterialRepository materialRepository;
+    private SourceRepository sourceRepository;
+
+    @Mock
+    private MaterialRepository materialRepository;
 
     @Mock
     private PdfGeneratorService pdfGeneratorService;
@@ -29,47 +35,46 @@ class CreateMaterialServiceTest {
     private CreateMaterialService createMaterialService;
 
     @Test
-    void createMaterial_ShouldThrowException_WhenNoSourcesFound() {
-        CreateMaterialRequest request = new CreateMaterialRequest(new ArrayList<>(Arrays.asList(1L, 2L)));
+    void createMaterial_ThrowsWhenNoSources() {
+        CreateMaterialRequest request = CreateMaterialRequest.builder()
+                .sources_id(List.of(1L, 2L))
+                .build();
 
-         when(materialRepository.getAllByIds(any())).thenReturn(new ArrayList<>());
+        when(sourceRepository.getAllByIds(any())).thenReturn(new ArrayList<>());
 
         assertThrows(IllegalArgumentException.class, () ->
                 createMaterialService.createMaterial(1L, request));
+
+        verify(sourceRepository).getAllByIds(request.getSources_id());
     }
 
     @Test
-    void createMaterial_ShouldReturnMaterialId_WhenSuccessful() {
+    void createMaterial_Success() {
         // Arrange
         Long teacherId = 1L;
+        List<Long> sourceIds = List.of(1L, 2L);
         CreateMaterialRequest request = CreateMaterialRequest.builder()
-                .sources_id(new ArrayList<>(Arrays.asList(1L, 2L)))
+                .sources_id(sourceIds)
                 .build();
 
-        SourceEntity source1 = new SourceEntity(1L, "Title1", "Desc1", "Body1");
-        SourceEntity source2 = new SourceEntity(2L, "Title2", "Desc2", "Body2");
+        SourceEntity source1 = new SourceEntity(1L, "Title1", "desc1", "Content1");
+        SourceEntity source2 = new SourceEntity(2L, "Title2", "desc2", "Content2");
         List<SourceEntity> sources = Arrays.asList(source1, source2);
 
-        SourceEntity combinedSource = new SourceEntity(null, "Combined", "Combined Desc", "Combined Body");
-        String materialUrl = "http://example.com/material.pdf";
+        SourceEntity combinedSource = new SourceEntity(1L, "Combined", "combined desc", "Combined Content");
+        String pdfUrl = "http://example.com/material.pdf";
+        MaterialEntity savedMaterial = new MaterialEntity(combinedSource, teacherId, pdfUrl);
 
-        MaterialEntity savedMaterial = MaterialEntity.builder()
-                .id(1L)
-                .title(combinedSource.getTitle())
-                .description(combinedSource.getDescription())
-                .fileUrl(materialUrl)
-                .teacherId(teacherId)
-                .isPublic(false)
-                .build();
-
-        when(materialRepository.getAllByIds(any())).thenReturn(sources);
-        when(pdfGeneratorService.generateCombinedSource(any())).thenReturn(combinedSource);
-        when(pdfGeneratorService.generatePdf(any())).thenReturn(materialUrl);
+        when(sourceRepository.getAllByIds(sourceIds)).thenReturn(sources);
+        when(pdfGeneratorService.generateCombinedSource(sources)).thenReturn(combinedSource);
+        when(pdfGeneratorService.generatePdf(combinedSource)).thenReturn(pdfUrl);
         when(materialRepository.save(any())).thenReturn(savedMaterial);
 
         Long result = createMaterialService.createMaterial(teacherId, request);
 
-        assertEquals(1L, result);
-        verify(materialRepository, times(1)).save(any());
+        verify(sourceRepository).getAllByIds(sourceIds);
+        verify(pdfGeneratorService).generateCombinedSource(sources);
+        verify(pdfGeneratorService).generatePdf(combinedSource);
+        verify(materialRepository).save(any(MaterialEntity.class));
     }
 }
